@@ -29,6 +29,8 @@
   of a keyword (MySQL bug #59835, Oracle bug #11766671)
 - fixed calculation of precision and scale for decimal columns
   (MySQL bug #59989, Oracle bug #11776346)
+- fixed NullReferenceException when a timeout occurred inside a TransactionScope
+  (MySQL bug #59346, Oracle bug #11766272)
 
 Version 6.2.4
 - Fix authorization popup after modifying stored procedure in VS (Bug #44715)
